# bioexcel-code-releases

./: README  make-tarballs.sh
CPMD/: CMakeLists.txt  INSTALL  LICENSE  LICENSE.lesser  README
CPMD/MiMiC/: CMakeLists.txt  COPYING  README
CPMD/MiMiC/cmake/: DownloadProject.CMakeLists.cmake.in
CPMD/MiMiC/src/: DataTypes.h  MCLMain.h  MessageApi.cpp  MessageApi.h
CPMD/MiMiC/src/message/: BaseMessageData.h  ClientData.h  FloatArrayData.h  Message.h  SystemData.h
CPMD/MiMiC/src/serializer/: Serializer.h
CPMD/MiMiC/src/transport/: Client.cpp  Client.h  Endpoint.h  MPITransport.cpp  MPITransport.h  Server.cpp  Server.h  Transport.h
CPMD/MiMiC/tests/: APITest.cpp  EndpointsTest.cpp  MPITransportTest.cpp
CPMD/MiMiCCommLib/: .gitlab-ci.yml  CMakeLists.txt
CPMD/MiMiCCommLib/cmake/: CTestCustom.cmake  CommlibConfig.cmake  FindIB.cmake
CPMD/MiMiCCommLib/src/: MCLMain.h
CPMD/MiMiCCommLib/src/message/: BaseMessageData.h
CPMD/MiMiCCommLib/src/serializer/: Serializer.h
CPMD/MiMiCCommLib/src/transport/: Client.h  Endpoint.h  IBTransport.cpp  IBTransport.h
CPMD/MiMiCCommLib/tests/: MPITransportTest.cpp
CPMD/MiMiC_Patch_for_CPMD/: README
CPMD/MiMiC_Patch_for_CPMD/MiMiCCommLib/: DataTypes.h  README.md  commlib.conf
CPMD/MiMiC_Patch_for_CPMD/MiMiCCommLib/src/: CMakeLists.txt  MessageApi.cpp  MessageApi.h
CPMD/MiMiC_Patch_for_CPMD/MiMiCCommLib/src/message/: Message.h
CPMD/MiMiC_Patch_for_CPMD/MiMiCCommLib/src/transport/: MPITransport.cpp  MPITransport.h  Server.cpp  Server.h  Transport.h
CPMD/MiMiC_Patch_for_CPMD/MiMiCCommLib/tests/: APITest.cpp  CMakeLists.txt  EndpointsTest.cpp
CPMD/cmake/: LICENSE
CPMD/src/: CMakeLists.txt  DataTypes.h  MessageApi.cpp
CPMD/src/message/: ClientData.h  Message.h  SystemData.h
CPMD/src/transport/: Client.h  Endpoint.h  MPITransport.cpp  Server.h
CPMD/tests/: CMakeLists.txt  EndpointsTest.cpp  MPITransportTest.cpp
GROMACS/: README
GROMACS/documentation/: download.html  genindex.html  htmlpublisher-wrapper.html  index.html  objects.inv  search.html  searchindex.js
GROMACS/documentation/Website/: .buildinfo  download.html  genindex.html  htmlpublisher-wrapper.html  index.html  objects.inv  search.html  searchindex.js
GROMACS/documentation/Website/_images/: graphviz-3b943e6526fea3a7bb9b5ba9b545c51620358d73.png.map
GROMACS/documentation/Website/dev-manual/: build-system.html  commitstyle.html  documentation-generation.html  doxygen.html  error-handling.html  formatting.html  gmxtree.html  includestyle.html  index.html  jenkins.html  language-features.html  naming.html  overview.html  relocatable-binaries.html  reportstyle.html  style.html  testutils.html  tools.html  uncrustify.html
GROMACS/documentation/Website/install-guide/: index.html
GROMACS/documentation/Website/onlinehelp/: gmx-anadock.html  gmx-anaeig.html  gmx-analyze.html  gmx-angle.html  gmx-awh.html  gmx-bar.html  gmx-bundle.html  gmx-check.html  gmx-chi.html  gmx-cluster.html  gmx-clustsize.html  gmx-confrms.html  gmx-convert-tpr.html  gmx-covar.html  gmx-current.html  gmx-density.html  gmx-densmap.html  gmx-densorder.html  gmx-dielectric.html  gmx-dipoles.html  gmx-disre.html  gmx-distance.html  gmx-do_dssp.html  gmx-dos.html  gmx-dump.html  gmx-dyecoupl.html  gmx-dyndom.html  gmx-editconf.html  gmx-eneconv.html  gmx-enemat.html  gmx-energy.html  gmx-filter.html  gmx-freevolume.html  gmx-gangle.html  gmx-genconf.html  gmx-genion.html  gmx-genrestr.html  gmx-grompp.html  gmx-gyrate.html  gmx-h2order.html  (+60 more)
GROMACS/documentation/Website/release-notes/: index.html
GROMACS/documentation/Website/user-guide/: cmdline.html  cutoff-schemes.html  environment-variables.html  faq.html  file-formats.html  floating-point.html  flow.html  force-fields.html  getting-started.html  index.html  managing-simulations.html  mdp-options.html  mdrun-features.html  mdrun-performance.html  run-time-errors.html  system-preparation.html  terminology.html
GROMACS/documentation/_images/: graphviz-2eb4f0e3760621bd1b31e757f1cd7c099d737926.png.map  graphviz-9694dfe401cf976ff7daa5ac1d3e94dc57d1d3c3.png.map
GROMACS/documentation/_sources/onlinehelp/: gmx-anadock.txt  gmx-anaeig.txt  gmx-angle.txt  gmx-bundle.txt  gmx-check.txt  gmx-chi.txt  (+75 more)
GROMACS/documentation/dev-manual/: build-system.html  doxygen.html  formatting.html  gmxtree.html  includestyle.html  index.html  jenkins.html  language-features.html  naming.html  overview.html  relocatable-binaries.html  style.html  testutils.html  tools.html  uncrustify.html
GROMACS/documentation/install-guide/: index.html
GROMACS/documentation/onlinehelp/: gmx-anadock.html  gmx-anaeig.html  gmx-analyze.html  gmx-angle.html  gmx-bar.html  gmx-bundle.html  gmx-check.html  gmx-chi.html  gmx-cluster.html  gmx-clustsize.html  gmx-confrms.html  gmx-convert-tpr.html  gmx-covar.html  gmx-current.html  gmx-density.html  gmx-densmap.html  gmx-densorder.html  gmx-dielectric.html  gmx-dipoles.html  gmx-disre.html  gmx-distance.html  gmx-do_dssp.html  gmx-dos.html  gmx-dump.html  gmx-dyecoupl.html  gmx-dyndom.html  gmx-editconf.html  gmx-eneconv.html  gmx-enemat.html  gmx-energy.html  gmx-filter.html  gmx-freevolume.html  gmx-gangle.html  gmx-genconf.html  gmx-genion.html  gmx-genrestr.html  gmx-grompp.html  gmx-gyrate.html  gmx-h2order.html  gmx-hbond.html  (+57 more)
GROMACS/documentation/user-guide/: cmdline.html  cutoff-schemes.html  environment-variables.html  file-formats.html  flow.html  getting-started.html  index.html  mdp-options.html  mdrun-features.html  mdrun-performance.html  system-preparation.html
GROMACS/gromacs-2016.3/: INSTALL
GROMACS/gromacs-2018.3/: INSTALL
GROMACS/gromacs-2019-beta1/: INSTALL
GROMACS/pmx/scripts_ligands/: atoms_to_morph.py  build_mst_graph.py  make_hybrid.py
GROMACS/regressiontests-2016.3/: README.kernel  gmxtest.pl
GROMACS/regressiontests-2016.3/pdb2gmx/: em.mdp
GROMACS/regressiontests-2016.3/rotation/: README
GROMACS/regressiontests-2018.3/: .gitignore  README.reference  gmxtest.pl
GROMACS/regressiontests-2018.3/pdb2gmx/: em.mdp
GROMACS/regressiontests-2019-beta1/: gmxtest.pl
HADDOCK/: README
(+24783 files in other folders)
